# Shyemu

./: AUTHORS  README-WINDOWS.txt  TERM OF USE AGREEMENT  configure.ac  extract_svn_revision.sh  make_precompiled_header.sh  make_precompiled_header_debug.sh
Extractors/: Logon-Restarter.bat  Restarter.bat  World-Restarter.bat
Extractors/DBC Extractor/: Readme (ShyEMU DBC extractor).txt  ShyEMU DBC extractor.bat
Extractors/Map Extractor/: Readme (ad.exe).txt
configs/: logon.conf  optional.conf  realms.conf  tips.txt  world.conf
extras/: looking_for_client_extractor_suite_binary(easyuse).txt
extras/MPQE/: ArcEmu English DBC Extractor.bat
extras/map_extractor/: adt.cpp  adt.h
extras/mpqe_cpp/: extractdbc.bat  mpqe_cpp.sln  mpqe_cpp.vcproj
sql/: 12_characters_structure.sql  1913_logon_structure.sql  1913_world_structure.sql  46_characters_structure.sql  46_logon_structure.sql
sql/character_updates/: 40_dualspec.sql
sql/quest_scripts_updates/: 2616.sql
sql/utilities/: ArcEmu DB Updater Test.bat  ArcEmu DB Updater.bat
sql/world_updates/: 39_Lightwellfix.sql
src/: Makefile.am
src/.svn/: entries
src/collision/: Interface.cpp
src/lua-scripts/: Goodboss.lua  (+6 more)
src/shyemu-logonserver/: AccountCache.cpp  AccountCache.h  AuthSocket.cpp  AuthSocket.h  AuthStructs.h  AutoPatcher.cpp  AutoPatcher.h  LogonCommServer.cpp  LogonCommServer.h  LogonConsole.cpp  LogonConsole.h  LogonOpcodes.cpp  LogonOpcodes.h  LogonStdAfx.cpp  LogonStdAfx.h  Main.cpp  Main.h  Makefile.am  PeriodicFunctionCall_Thread.h
src/shyemu-realmserver/: Makefile.am
win/: shyemuVC90.sln
(+360 files in other folders)
